--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.lpsil.jstratprojet.MenuActivity"
-    android:background="@android:color/background_light">
+    android:background="@android:color/darker_gray">
 
 
     <Button
