--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,22 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_menu"
+    android:id="@+id/fullscreen_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/paysage"
     tools:context="com.lpsil.jstratprojet.MenuActivity"
-    android:background="@android:color/darker_gray">
+    >
+    <FrameLayout
+        android:id="@+id/activity_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:keepScreenOn="true"
+       >
+        <LinearLayout
+            android:id="@+id/fullscreen_content_controls"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
-
-    <Button
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:id="@+id/butJouer"
-        android:background="@drawable/btplay"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/butJouer"
+                android:background="@drawable/btplay2"
+                 />
+        </LinearLayout>
+    </FrameLayout>
 </RelativeLayout>
