Bouton quitter menu

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -19,7 +19,7 @@
         android:keepScreenOn="true"
        >
         <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
+
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center_horizontal|center_vertical"
@@ -32,6 +32,19 @@
                 android:id="@+id/butJouer"
                 android:background="@drawable/btplay2"
                  />
+        </LinearLayout>
+        <LinearLayout
+
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|top"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/butQuit"
+                android:background="@drawable/btquitter" />
         </LinearLayout>
     </FrameLayout>
 </RelativeLayout>
