Bouton quitter aspect

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -17,7 +17,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-       >
+        tools:ignore="UselessParent">
         <LinearLayout
 
             android:layout_width="150dp"
@@ -35,10 +35,10 @@
         </LinearLayout>
         <LinearLayout
 
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right|top"
-            android:orientation="horizontal">
+            android:layout_width="75dp"
+            android:layout_gravity="top|end"
+            android:orientation="horizontal"
+            android:layout_height="75dp">
 
             <Button
                 android:layout_width="match_parent"
