--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -11,38 +11,66 @@
     android:background="@drawable/paysage"
     tools:context="com.lpsil.jstratprojet.MenuActivity"
     >
+
     <FrameLayout
         android:id="@+id/activity_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        tools:ignore="UselessParent">
+        tools:ignore="UselessParent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
         <LinearLayout
-
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center_horizontal|center_vertical"
+            android:background="@drawable/shadowbt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="horizontal"
-            >
+            android:padding="10dp"
+            android:animateLayoutChanges="false"
+            android:alwaysDrawnWithCache="false"
+            android:clickable="false"
+            android:hapticFeedbackEnabled="false"
+            android:keepScreenOn="false"
+            android:id="@+id/lay_but_jouer">
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:id="@+id/butJouer"
                 android:background="@drawable/btplay2"
+
                  />
         </LinearLayout>
         <LinearLayout
-
-            android:layout_width="75dp"
-            android:layout_gravity="top|end"
+            android:background="@drawable/shadowbt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
             android:orientation="horizontal"
-            android:layout_height="75dp">
+            android:padding="50dp"
+            android:id="@+id/lay_but_score">
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:id="@+id/butScore"
+                android:background="@drawable/scores"
+
+                />
+        </LinearLayout>
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_gravity="top|end"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:padding="2dp">
+
+            <Button
+                android:layout_width="75dp"
+                android:layout_height="75dp"
                 android:id="@+id/butQuit"
                 android:background="@drawable/btquitter" />
         </LinearLayout>
